[package]
name = "ecrecover-bench"
version = "1.0.0"
authors = ["NeonLabs Maintainers <maintainers@cyber-core.dev>"]
edition = "2018"

[dependencies]
borsh = "0.8.1"
borsh-derive = "0.8.1"
bs58 = "0.3.1"
k256 = "0.8.1"
libsecp256k1 = "0.5.0"
rand_core = { version = "0.6.2", features = ["getrandom"] }
sha3 = "0.9.1"
solana_rbpf = "0.2.8"
solana-sdk = "1.6.9"
structopt = { version = "0.3.21", features = ["color"] }
thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
rand = "0.7.0"

[profile.release]
incremental = true
